# rust-todo-app

./: .env.example  .gitignore  .lintstagedrc  AGENTS.md  Cargo.toml  docker-compose.yml  index.html  package.json  ui_config.toml
.zed/: settings.json
docs/notes/: error-handling-follow-ups.md  task-id-follow-ups.md
migrations/: 20260430152918_create_tasks.sql
src/: app.rs  config.rs  lib.rs  main.rs  models.rs  tailwind.css
src/components/: add_task.rs  mod.rs  task_card.rs  tasks_view.rs
src/components/ui/: mod.rs
src/tasks/: mod.rs
src/tasks/application/: task_service.rs
src/tasks/domain/: mod.rs  task.rs  task_id.rs  task_title.rs
src/tasks/infrastracture/: mod.rs  task_repository.rs
src/tasks/infrastructure/: mod.rs  task_repository.rs  task_row.rs
src/tasks/presentation/: mod.rs  server_functions.rs
src/tasks/presentation/components/: add_task.rs  mod.rs  task_card.rs  tasks_view.rs
src/tasks/presentation/views/: mod.rs  tasks_view.rs
