[package]
name = "rust-todo-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
icons = { version = "0.18.2", features = ["leptos"] }
leptos = "0.8.19"
leptos_axum = { version = "0.8", optional = true }
leptos_router = "0.8.13"
leptos_ui = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
tw_merge = { version = "0.1.21", features = ["variant"] }
web-sys = { version = "0.3.95", features = ["Window", "Storage"] }
axum = { version = "0.8", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
leptos_meta = "0.8.6"
dotenvy = "0.15.7"

[features]
hydrate = [
  "leptos/hydrate",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
tailwind-input-file = "src/tailwind.css"
output-name = "rust-todo-app"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style.css"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
